--- a/gb/19/7/15/n11385511.md
+++ b/gb/19/7/15/n11385511.md
@@ -1,56 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Î÷°Ä½üº£·¢Éú6.6¼¶µØÕðÓàÕð28Æð</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oksoce3137/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oksoce3137/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oksoce3137/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oksoce3137/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è¥¿æ¾³è¿‘æµ·å‘ç”Ÿ6.6çº§åœ°éœ‡ä½™éœ‡28èµ·</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ15ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÌìî£<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a>Ï¤Äá±àÒë±¨µ¼£©7ÔÂ14ÈÕÏÂÎç£¬Î÷°Ä½üº£·¢ÉúÀïÊÏ6.6¼¶<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md">µØÕð</a>£¬ÕâÊÇÆù½ñÎªÖ¹µ±µØÕð¼¶×î¸ßµÄÒ»´ÎµØÕð£¬¸½½üº£°¶µØÇøÓÐÇ¿ÁÒ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E9%9C%87%E6%84%9F.md">Õð¸Ð</a>£¬½¨ÖþÎïÓÐÇáÎ¢ËðÉË¡£ËæºóÓÖ·¢ÉúÁË28Æð<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E4%BD%99%E9%9C%87.md">ÓàÕð</a>¡£×¨¼Ò±íÊ¾£¬ÕâÊÇºÜº±¼ûµÄµØÕðÊÂ¼þ¡£ËùÐÒ£¬µØÕðºÍÓàÕð¶¼Ã»ÓÐÒý·¢º£Ð¥¡£</p>
-<p>¾ÝµØÖÊ¿ÆÑ§¾Ö£¨Geoscience Australia£©ÏûÏ¢£¬14ÈÕÏÂÎç1µã39·Ö£¬6.6¼¶<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md">µØÕð</a>Ï®»÷ÁËÎ÷°Ä²¼Â³Ä·£¨Broome£©ºÍºÚµÂÀ¼¸Û£¨Port Hedland£©Ö®¼ä£¬¾àÀëº£°¶200¹«ÀïµÄÇøÓò£»µØÕðºó£¬µ±µØÓÖ·¢ÉúÁË28Æð<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E4%BD%99%E9%9C%87.md">ÓàÕð</a>£¬µ¥ÖÜÒ»ÉÏÎç¾ÍÓÐ7Æð£¬ÆäÖÐÒ»ÆðÔÚ7µã×óÓÒ·¢ÉúµÄÓàÕðÕð¼¶¸ß´ï5.5¼¶¡£</p>
-<p>14ÈÕÏÂÎçµÄµØÕð·¢ÉúÊ±£¬½ð²®Àû£¨Kimberley£©¡¢Ô¶ÔÚ½ü2000¹«ÀïÖ®ÍâµÄçêË¹ÒÔ¼°±±ÁìµØÊ×¸®´ï¶ûÎÄµÄ¾ÓÃñ¾ùÓÐ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E9%9C%87%E6%84%9F.md">Õð¸Ð</a>£¬²¼Â³Ä·µØÇøÓÐ½¨ÖþÇáÎ¢ÊÜËð£¬µ«Ã»ÓÐÑÏÖØËðÊ§¡£µØÕð·¢ÉúÊ±£¬Ò»Ð©³¬ÊÐ»õ¼ÜÉÏµÄÉÌÆ·±»Õðµ½ÁËµØÉÏ¡£</p>
-<p>µ«ÉÐÎ´·¢ÏÖÉËÍöÊÂ¼þ¡£º£Ð¥¾¯±¨ÖÐÐÄÒÑ¾­ÅÅ³ýÁËº£Ð¥·çÏÕ¡£</p>
-<p>µØÕð¾ÖµØÕðÑ§¼Ò¿µÃ÷Ë¹£¨Phil Cummins£©¶Ô<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a>¹ã²¥¹«Ë¾Ëµ£º¡°Õâ·Ç³£º±¼û¡­Äã¿ÉÄÜ»áÔÚÃ¿20Äê¼ûµ½Ò»´ÎÕâÑùµÄÊÂ¼þ¡£ºÜÄÑ½²ÕâÊÇ·ñÊÇÊ²Ã´´óÊÂÇé·¢ÉúµÄÇ°Õ×¡£¡±</p>
-<p>Ëû±íÊ¾£¬Õâ´ÎµØÕðºóÔ¤¼Æ»¹»áÓÐÐ¡¹æÄ£ÓàÕð¡£Ëæ×ÅÊ±¼äµÄÍÆÒÆ£¬ÓàÕð³öÏÖµÄÆµÂÊ»áÔ½À´Ô½Ð¡£¬Õð¼¶Ò²»áÔ½À´Ô½Ð¡£¬µ«²»ÅÅ³ýÔÙ´Î·¢ÉúÑÏÖØµØÕðµÄ¿ÉÄÜÐÔ¡£¡°ÓàÕðµÄÕð¼¶¿ÉÄÜ¸ß´ï5.6¼¶£¬½ñÔç¾Í³öÏÖÁËÒ»´Î5.1¼¶µÄÓàÕð£¬¶ÔÓÚµØÕðºóµÄµäÐÍÓàÕðÏÖÏóÀ´Ëµ£¬ÕâÊÇÔÚÔ¤ÁÏÖ®ÖÐµÄ¡£¡±</p>
-<p>¾Ó×¡ÔÚ²¼Â³Ä·±±²¿170¹«Àï´¦Ã·ÈüµÂË¹Íå£¨Mercedes Cove£©µÄ¾ÓÃñÇ®Äþ£¨David Channing£©¶Ô°ÄÖÞ¹ã²¥¹«Ë¾Ëµ£º¡°£¨14ÈÕµÄµØÕð£©Ò»¹²À´ÁËÈý²¨£¬·Ç³£Ç¿ÁÒ£¬¾ÍÏñ20ÄêÇ°ÎÒ¾­ÀúµÄÄÇ´Î¡£Í¦ÏÅÈËµÄ£¬ÎÝ×ÓÔÚÖ¨¸Â×÷Ïì£¬¾ÍÕâÃ´³ÖÐø×Å¡£¡±</p>
-<p>µØÕðÖ®ºó£¬Ç®ÄþµÄÉ©×Ó¸øËû´òÁËµç»°£¬µØÕð·¢ÉúÊ±ËýÕýÔÚ¹ºÎïÖÐÐÄ¡£¡°ËýËµ£¬¹ºÎïÖÐÐÄÃ¿¸öÈË¶¼ÅÜÁË¡£²£Á§ºÍËùÓÐµÄ¶«Î÷¶¼ÔÚÕð¶¯£¬Ã¿¸öÈË¶¼ÔÚÅÜ¡£¡±</p>
-<p>Î÷°Ä´ËÇ°×îÑÏÖØµÄµØÕð·¢ÉúÔÚ50¶àÄêÇ°£¬Õð¼¶Îª6.5¼¶¡£ËäÈ»Õâ´ÎµØÕðµÄ¼¶±ð´òÆÆÁË´ËÇ°µÄ¼ÍÂ¼£¬µ«Ôì³ÉµÄËðÊ§È´Ð¡µÃ¶à¡£</p>
-<p>ÔðÈÎ±à¼­£ºÈðÄ¾ÔÃ</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ15æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¤©ç¿<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a>æ‚‰å°¼ç¼–è¯‘æŠ¥å¯¼ï¼‰7æœˆ14æ—¥ä¸‹åˆï¼Œè¥¿æ¾³è¿‘æµ·å‘ç”Ÿé‡Œæ°6.6çº§<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">åœ°éœ‡</a>ï¼Œè¿™æ˜¯è¿„ä»Šä¸ºæ­¢å½“åœ°éœ‡çº§æœ€é«˜çš„ä¸€æ¬¡åœ°éœ‡ï¼Œé™„è¿‘æµ·å²¸åœ°åŒºæœ‰å¼ºçƒˆ<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E9%9C%87%E6%84%9F.md#1">éœ‡æ„Ÿ</a>ï¼Œå»ºç­‘ç‰©æœ‰è½»å¾®æŸä¼¤ã€‚éšåŽåˆå‘ç”Ÿäº†28èµ·<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E4%BD%99%E9%9C%87.md#1">ä½™éœ‡</a>ã€‚ä¸“å®¶è¡¨ç¤ºï¼Œè¿™æ˜¯å¾ˆç½•è§çš„åœ°éœ‡äº‹ä»¶ã€‚æ‰€å¹¸ï¼Œåœ°éœ‡å’Œä½™éœ‡éƒ½æ²¡æœ‰å¼•å‘æµ·å•¸ã€‚</p>
+<p>æ®åœ°è´¨ç§‘å­¦å±€ï¼ˆGeoscience Australiaï¼‰æ¶ˆæ¯ï¼Œ14æ—¥ä¸‹åˆ1ç‚¹39åˆ†ï¼Œ6.6çº§<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">åœ°éœ‡</a>è¢­å‡»äº†è¥¿æ¾³å¸ƒé²å§†ï¼ˆBroomeï¼‰å’Œé»‘å¾·å…°æ¸¯ï¼ˆPort Hedlandï¼‰ä¹‹é—´ï¼Œè·ç¦»æµ·å²¸200å…¬é‡Œçš„åŒºåŸŸï¼›åœ°éœ‡åŽï¼Œå½“åœ°åˆå‘ç”Ÿäº†28èµ·<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E4%BD%99%E9%9C%87.md#1">ä½™éœ‡</a>ï¼Œå•å‘¨ä¸€ä¸Šåˆå°±æœ‰7èµ·ï¼Œå…¶ä¸­ä¸€èµ·åœ¨7ç‚¹å·¦å³å‘ç”Ÿçš„ä½™éœ‡éœ‡çº§é«˜è¾¾5.5çº§ã€‚</p>
+<figure id="attachment_11385717" aria-describedby="caption-attachment-11385717" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/2019-07-15-16124-Capture.jpg"><img class="wp-image-11385717 size-medium" src="https://i.epochtimes.com/assets/uploads/2019/07/2019-07-15-16124-Capture-450x221.jpg" alt="" width="450" b="221" /></a><figcaption id="caption-attachment-11385717" class="wp-caption-text">7æœˆ14æ—¥ä¸‹åˆï¼Œè¥¿æ¾³è¿‘æµ·å‘ç”Ÿé‡Œæ°6.6çº§åœ°éœ‡ã€‚ï¼ˆGeoscience Australiaç½‘ç«™æˆªå›¾ï¼‰</figcaption></figure>
+<p>14æ—¥ä¸‹åˆçš„åœ°éœ‡å‘ç”Ÿæ—¶ï¼Œé‡‘ä¼¯åˆ©ï¼ˆKimberleyï¼‰ã€è¿œåœ¨è¿‘2000å…¬é‡Œä¹‹å¤–çš„ç€æ–¯ä»¥åŠåŒ—é¢†åœ°é¦–åºœè¾¾å°”æ–‡çš„å±…æ°‘å‡æœ‰<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E9%9C%87%E6%84%9F.md#1">éœ‡æ„Ÿ</a>ï¼Œå¸ƒé²å§†åœ°åŒºæœ‰å»ºç­‘è½»å¾®å—æŸï¼Œä½†æ²¡æœ‰ä¸¥é‡æŸå¤±ã€‚åœ°éœ‡å‘ç”Ÿæ—¶ï¼Œä¸€äº›è¶…å¸‚è´§æž¶ä¸Šçš„å•†å“è¢«éœ‡åˆ°äº†åœ°ä¸Šã€‚</p>
+<p>ä½†å°šæœªå‘çŽ°ä¼¤äº¡äº‹ä»¶ã€‚æµ·å•¸è­¦æŠ¥ä¸­å¿ƒå·²ç»æŽ’é™¤äº†æµ·å•¸é£Žé™©ã€‚</p>
+<p>åœ°éœ‡å±€åœ°éœ‡å­¦å®¶åº·æ˜Žæ–¯ï¼ˆPhil Cumminsï¼‰å¯¹<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a>å¹¿æ’­å…¬å¸è¯´ï¼šâ€œè¿™éžå¸¸ç½•è§â€¦ä½ å¯èƒ½ä¼šåœ¨æ¯20å¹´è§åˆ°ä¸€æ¬¡è¿™æ ·çš„äº‹ä»¶ã€‚å¾ˆéš¾è®²è¿™æ˜¯å¦æ˜¯ä»€ä¹ˆå¤§äº‹æƒ…å‘ç”Ÿçš„å‰å…†ã€‚â€</p>
+<p>ä»–è¡¨ç¤ºï¼Œè¿™æ¬¡åœ°éœ‡åŽé¢„è®¡è¿˜ä¼šæœ‰å°è§„æ¨¡ä½™éœ‡ã€‚éšç€æ—¶é—´çš„æŽ¨ç§»ï¼Œä½™éœ‡å‡ºçŽ°çš„é¢‘çŽ‡ä¼šè¶Šæ¥è¶Šå°ï¼Œéœ‡çº§ä¹Ÿä¼šè¶Šæ¥è¶Šå°ï¼Œä½†ä¸æŽ’é™¤å†æ¬¡å‘ç”Ÿä¸¥é‡åœ°éœ‡çš„å¯èƒ½æ€§ã€‚â€œä½™éœ‡çš„éœ‡çº§å¯èƒ½é«˜è¾¾5.6çº§ï¼Œä»Šæ—©å°±å‡ºçŽ°äº†ä¸€æ¬¡5.1çº§çš„ä½™éœ‡ï¼Œå¯¹äºŽåœ°éœ‡åŽçš„å…¸åž‹ä½™éœ‡çŽ°è±¡æ¥è¯´ï¼Œè¿™æ˜¯åœ¨é¢„æ–™ä¹‹ä¸­çš„ã€‚â€</p>
+<p>å±…ä½åœ¨å¸ƒé²å§†åŒ—éƒ¨170å…¬é‡Œå¤„æ¢…èµ›å¾·æ–¯æ¹¾ï¼ˆMercedes Coveï¼‰çš„å±…æ°‘é’±å®ï¼ˆDavid Channingï¼‰å¯¹æ¾³æ´²å¹¿æ’­å…¬å¸è¯´ï¼šâ€œï¼ˆ14æ—¥çš„åœ°éœ‡ï¼‰ä¸€å…±æ¥äº†ä¸‰æ³¢ï¼Œéžå¸¸å¼ºçƒˆï¼Œå°±åƒ20å¹´å‰æˆ‘ç»åŽ†çš„é‚£æ¬¡ã€‚æŒºå“äººçš„ï¼Œå±‹å­åœ¨å±å˜Žä½œå“ï¼Œå°±è¿™ä¹ˆæŒç»­ç€ã€‚â€</p>
+<p>åœ°éœ‡ä¹‹åŽï¼Œé’±å®çš„å«‚å­ç»™ä»–æ‰“äº†ç”µè¯ï¼Œåœ°éœ‡å‘ç”Ÿæ—¶å¥¹æ­£åœ¨è´­ç‰©ä¸­å¿ƒã€‚â€œå¥¹è¯´ï¼Œè´­ç‰©ä¸­å¿ƒæ¯ä¸ªäººéƒ½è·‘äº†ã€‚çŽ»ç’ƒå’Œæ‰€æœ‰çš„ä¸œè¥¿éƒ½åœ¨éœ‡åŠ¨ï¼Œæ¯ä¸ªäººéƒ½åœ¨è·‘ã€‚â€</p>
+<p>è¥¿æ¾³æ­¤å‰æœ€ä¸¥é‡çš„åœ°éœ‡å‘ç”Ÿåœ¨50å¤šå¹´å‰ï¼Œéœ‡çº§ä¸º6.5çº§ã€‚è™½ç„¶è¿™æ¬¡åœ°éœ‡çš„çº§åˆ«æ‰“ç ´äº†æ­¤å‰çš„çºªå½•ï¼Œä½†é€ æˆçš„æŸå¤±å´å°å¾—å¤šã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šç‘žæœ¨æ‚¦</p>
 <p>&nbsp;</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/15/n11385511.htm">Î÷°Ä½üº£·¢Éú6.6¼¶µØÕðÓàÕð28Æð</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/24/n11342186.htm">Ó¡Äá°à´ïº£·¢Éú7.3¼¶µØÕð °ÄÖÞÓÐÕð¸Ð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/26/n11003434.htm">¿°ÅàÀ­±±²¿±ß½çÍâ·¢Éú3.1¼¶µØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/10/n10842798.htm">ÐÂÑÐ¾¿ Î÷°ÄÎ÷±±º£°¶º£Ð¥¸ÅÂÊ´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/9/n10840032.htm">çêË¹Î÷ÄÏ·¢Éú5.4¼¶µØÕð Á½ÔÂÀ´µÚ¶þ´Î</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/10/19/n10794327.htm">¿°ÅàÀ­µØÕð·çÏÕÔÚÊ×¸®³ÇÊÐÖÐÅÅÊ×Î»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/10/16/n10787406.htm">ÐÂÑÐ¾¿ÏÔÊ¾£ºÏ¤Äáº£Ð¥ÍþÐ²¡°ÕæÊµ´æÔÚ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/10/1/n10753830.htm">µØÕðÔÖÇéÀ©´ó Ó¡ÄáÇëÇó¹ú¼ÊÔ®Öú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/26/n10741985.htm">Î÷°ÄÎªºÎ·¢Éú´óµØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/8/9/n10626072.htm">°Ä´óÀûÑÇÎ÷°ÄÄÏ°ÄÖÜÈýÍí·¢ÉúÇáÎ¢¼¶µØÕð</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/11/n11378875.htm">¡¾Ö±²¥¡¿·´ËÍÖÐ Ïã¸Û7.14É³Ìï11.5ÍòÈËÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/14/n11383523.htm">ÖÓÉ½ÉÏ³¡ ·ÖÎö£º´òÆÆÖÐ¹²¸ß²ãÈ¨Á¦Æ½ºâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11370955.htm">Ð£Ô°¡°Æß²»½²¡±ÖÐ¹²Éó²éÈÃÄêÇáÈËË¼ÏëÖÏÏ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/14/n11383617.htm">ÖÐ¹²Ê¿±ø´³ÈëÓ¡¶È ×èÖ¹²ØÈËÌæ´ïÀµÀ®ÂïÇìÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11373378.htm">´Ó°Ë×Ö¿´»éÒö ÄÐÅ®²îÁùËê½á»é²»ºÃÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353774.htm">ÌýÒ»¸öÈËµÄÉùÒô Ò²ÄÜÖªµÀËûµÄÃüÔË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/22/n11132616.htm">¡¾Õ÷ÎÄ¡¿Ò½Ê¥ÕÅÖÙ¾°ÁôÏÂÁËÒ©·½ºÍ¾¯ÊÀÃûÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/2/n11359799.htm">ÊÍåÈÄ²ÄáÓëËûµÄ¼ÒÈË£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/13/n11382987.htm">ÕÂÌìÁÁ£º³£ÍòÈ«³öÊÂ ¾üÍ·Óµ±øÎªºÎÎÞÈËÔì·´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/13/n11383078.htm">½ÓÁ¬×¥¼ÓÓ¢ÈËºó ÖÐ¹²ÓÖ×¥²¶12ÃûÌ¨ÍåÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/13/n11382921.htm">ÖÐ¹²³Æ½«ÖÆ²Ã¶ÔÌ¨¾üÊÛÃÀÆó ÎªºÎ±»ÃÀÅúÓÞ´À</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374248.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£³Æ¡°ÐÞÀý¡±Ê§°Ü ÄÑ½âÀ§¾Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11376513.htm">¡¾ÐÂÎÅ¿´µã¡¿»ªÎªÈçºÎ½â½û£¿ÃÀ¶¨±ê×¼µÄ±³ºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372403.htm">¡¾ÐÂÎÅ¿´µã¡¿°ÙÍò¸ÛÈË¿¹Õù ¶àÉÙ¹úÈË±»ÖÐ¹²ÆÛÂ÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11381839.htm">¶ÅãëÔóµ±Í·ºÅ·ÛË¿Ïë¼ûÕæÈË ºÎÔÏÊ«£ºÅÅ¶ÓÔ¤Ô¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11381633.htm">ÍøÃñ·¢Æð·´ºìÃ½ ºòÑ¡¸Û½ãÆú×øTVB±êÖ¾Ð¡°Í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11381827.htm">¸ÛÃ½±¨Ì·Ó½÷ë±±¾©ÑÝ³ª»á ÒýÍøÃñÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/13/n11382809.htm">È±Mina¿ª³ª ³ÉÔ±ÆëÀáËß¡°ÎÒÃÇ9ÈËÊÇTWICE¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/14/n11383394.htm">¡¶ÔÂ´å»¶Ó­Äã¡·É±Çà À¤´ïÉçÈº°ëÄê±ÜÌ¸¿Â¼Ñ‹÷</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/8/9/n10626072.md#1">æ¾³å¤§åˆ©äºšè¥¿æ¾³å—æ¾³å‘¨ä¸‰æ™šå‘ç”Ÿè½»å¾®çº§åœ°éœ‡</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/9/26/n10741985.md#1">è¥¿æ¾³ä¸ºä½•å‘ç”Ÿå¤§åœ°éœ‡</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/10/1/n10753830.md#1">åœ°éœ‡ç¾æƒ…æ‰©å¤§ å°å°¼è¯·æ±‚å›½é™…æ´åŠ©</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/10/16/n10787406.md#1">æ–°ç ”ç©¶æ˜¾ç¤ºï¼šæ‚‰å°¼æµ·å•¸å¨èƒâ€œçœŸå®žå­˜åœ¨â€</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/10/19/n10794327.md#1">å ªåŸ¹æ‹‰åœ°éœ‡é£Žé™©åœ¨é¦–åºœåŸŽå¸‚ä¸­æŽ’é¦–ä½</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/11/9/n10840032.md#1">ç€æ–¯è¥¿å—å‘ç”Ÿ5.4çº§åœ°éœ‡ ä¸¤æœˆæ¥ç¬¬äºŒæ¬¡</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/11/10/n10842798.md#1">æ–°ç ”ç©¶ è¥¿æ¾³è¥¿åŒ—æµ·å²¸æµ·å•¸æ¦‚çŽ‡å¤§</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/19/1/26/n11003434.md#1">å ªåŸ¹æ‹‰åŒ—éƒ¨è¾¹ç•Œå¤–å‘ç”Ÿ3.1çº§åœ°éœ‡</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/19/6/24/n11342186.md#1">å°å°¼ç­è¾¾æµ·å‘ç”Ÿ7.3çº§åœ°éœ‡ æ¾³æ´²æœ‰éœ‡æ„Ÿ</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/22/1/16/n13509239.md#1">ç­¾è¯å–æ¶ˆ å¾·çº¦ç§‘ç»´å¥‡æ¾³ç½‘å«å†•æ¢¦ç¢Žå§‹æœ«</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/15/n11385511.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">ã€Šå¤©å®‰é—¨æ€æˆ®ã€‹æŒ–åˆ°å…­å››äº‹ä»¶çš„æ ¹</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">æ³•è½®åŠŸç®€ä»‹</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/16/n11943195.md#1">æ—¥åª’ä½“äººè¯„å°æ¹¾é˜²ç–«2å¤§åŠŸè‡£ ç¬¬ä¸€åç«Ÿéžé™ˆæ—¶ä¸­</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11946346.md#1">ã€çŽ°åœºè§†é¢‘ã€‘å¬ä¿¡ä¸­å…±è°Žè¨€ è¿”äº¬äººæŒ¤çˆ†æœºåœº</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11945722.md#1">ã€ç¿»å¢™å¿…çœ‹ã€‘å®˜åª’åå¸¸ æ‰¹èµµç«‹åšâ€œä¸‹ä½œâ€ï¼Ÿ</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11948259.md#1">ä¸­å…±æ’¤é©»åŽç¾Žåª’è®°è€…å·¥ä½œè¯ è“¬ä½©å¥¥å¼ºçƒˆå›žåº”</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11946544.md#1">å°æ­Œä»”æˆå›½å®å°å‡¤ä»™ç—…é€ äº«å¯¿80å²ã€€</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11947993.md#1">ä¼Šæœ—éšçž’ç–«æƒ… æ¥è‡ªä¼Šæœ—çš„å°æ¹¾å¥³å©¿çˆ†çœŸç›¸</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹ä¸­å…±ç—…æ¯’</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/11/n11933369.md#1">æ¸…æœå­¦å£«ä¸‰å¥‡æ¢¦ æ˜¯è°æŽŒæ¡ä»–çš„ä¸€ç”Ÿï¼Ÿ</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/11/n11933376.md#1">åƒ§äººç²¾å‡†é¢„è¨€ ç…çŠä¸‰å­©ç«¥ç«Ÿæ˜¯â€œçœŸä¸€å“â€</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/13/1/31/n3790016.md#1">ç±³å¼€æœ—åŸºç½—Michelangeloï¼ˆ1ï¼‰æ—©å¹´ç”Ÿæ¶¯</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11946008.md#1">åäººçº·ç¡®è¯Š ã€ŠæƒåŠ›æ¸¸æˆã€‹ã€Šå¤ä»‡è€…ã€‹æ¼”å‘˜æŸ“ç–«</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/12/n11936269.md#1">ç¼˜è‡ªå¤©ä¸Šæ¥ è¿™å¯¹å¤«å¦»æ˜¯æ˜Ÿå®˜ä¸‹å‡¡</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oksoce3137/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oksoce3137/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/15/n11385511.htm">è¥¿æ¾³è¿‘æµ·å‘ç”Ÿ6.6çº§åœ°éœ‡ä½™éœ‡28èµ·</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oksoce3137/djy/blob/master/gb/19/7/15/n11385511.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oksoce3137/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oksoce3137/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
